<resources>
    <string name="app_name">Noodoe</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_timezone">Timezone</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_modify_timezone">Timezone update</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_timezone">Not a valid timezone</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="update_failed">"Update failed"</string>
    <string name="info_username">"User Name："</string>
    <string name="info_create">"Create at："</string>
    <string name="info_update">"Update at："</string>
    <string name="info_timezone">"Timezone："</string>
</resources>
